k8s/07-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: practica-backend
  namespace: devops-lab
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: practica-backend
  template:
    metadata:
      labels:
        app: practica-backend
    spec:
      containers:
        - name: backend
          image:  practica-backend:v1
          imagePullPolicy: IfNotPresent
          command: ["npm", "run", "dev"]
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 3
